examples/fail/call_var2.niu
import "std/u64.niu"

fn main() -> void {
  let hoge = 1;
  hoge(1u64);
}
